Profile layot full

--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -112,6 +112,173 @@
     <ImageView
         android:layout_marginTop="15dp"
         style="@style/DividerStyleFull"/>
-
+    <LinearLayout
+        android:paddingTop="15dp"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_height="wrap_content"
+                style="@style/CharacteristicsDiveSpotListIcons"
+                android:src="@drawable/ic_profile_checkin"/>
+            <LinearLayout
+                android:layout_width="258dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:text="Check in"/>
+                <TextView
+                    android:id="@+id/depth"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/depth_title"
+                    android:text="230" />
+            </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:src="@drawable/ic_arrow"/>
+        </LinearLayout>
+        <ImageView
+            style="@style/DividerStyle"/>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_height="wrap_content"
+                style="@style/CharacteristicsDiveSpotListIcons"
+                android:src="@drawable/ic_profile_added"/>
+            <LinearLayout
+                android:layout_width="258dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:text="@string/created"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/depth_title"
+                    android:text="230" />
+            </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:src="@drawable/ic_arrow"/>
+        </LinearLayout>
+        <ImageView
+            style="@style/DividerStyle"/>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_height="wrap_content"
+                style="@style/CharacteristicsDiveSpotListIcons"
+                android:src="@drawable/ic_profile_edited"/>
+            <LinearLayout
+                android:layout_width="258dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:text="@string/edited_low"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/depth_title"
+                    android:text="230" />
+            </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:src="@drawable/ic_arrow"/>
+        </LinearLayout>
+        <ImageView
+            style="@style/DividerStyle"/>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_height="wrap_content"
+                style="@style/CharacteristicsDiveSpotListIcons"
+                android:src="@drawable/ic_profile_fav"/>
+            <LinearLayout
+                android:layout_width="258dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:text="@string/favourites"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/depth_title"
+                    android:text="230" />
+            </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:src="@drawable/ic_arrow"/>
+        </LinearLayout>
+        <ImageView
+            android:layout_marginTop="10dp"
+            style="@style/DividerStyleFull"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="55dp">
+            <ImageView
+                style="@style/CharacteristicsDiveSpotListIcons"
+                android:src="@drawable/ic_profile_edit"/>
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_width="258dp"
+                android:layout_height="match_parent"
+                style="@style/CharacteristicsDiveSpotListTitle"
+                android:text="@string/edit_profile"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:src="@drawable/ic_arrow"/>
+        </LinearLayout>
+        <ImageView
+            style="@style/DividerStyleFull"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="55dp">
+            <ImageView
+                style="@style/CharacteristicsDiveSpotListIcons"
+                android:src="@drawable/ic_profile_logout"/>
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_width="258dp"
+                android:layout_height="match_parent"
+                style="@style/CharacteristicsDiveSpotListTitle"
+                android:text="Log out"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:src="@drawable/ic_arrow"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
