--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -90,15 +90,18 @@
         android:paddingRight="15dp"
         android:paddingTop="12dp">
         <LinearLayout
+            android:id="@+id/like_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/likes_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_review_like_empty"/>
             <TextView
+                android:id="@+id/likes_count"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -108,16 +111,19 @@
                 />
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/dislike_layout"
             android:layout_marginLeft="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/dislikes_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_review_dislike_empty"/>
             <TextView
+                android:id="@+id/dislikes_count"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
