--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -46,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:gravity="center_vertical|center_horizontal"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal" />
             </LinearLayout>
         </LinearLayout>
