--- a/trunk/ddscanner/app/src/main/res/layout/dialog_profile_info.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_profile_info.xml
@@ -108,7 +108,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center">
         <ImageView
             android:layout_width="95dp"
             android:layout_height="wrap_content"
@@ -128,6 +128,7 @@
             android:src="@drawable/divider"/>
     </LinearLayout>
     <LinearLayout
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
