--- a/trunk/ddscanner/app/src/main/res/layout/activity_all_photos.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_all_photos.xml
@@ -8,11 +8,13 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/photos_tab_layout"
         android:layout_width="match_parent"
+        android:layout_height="45dp"
         style="@style/tabLayout"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
-        app:tabMode="scrollable"/>
+        android:background="@color/white"
+        app:tabMode="fixed"/>
     <android.support.v4.view.ViewPager
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="7dp"
         android:id="@+id/photos_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
