--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -82,17 +82,22 @@
     </style>
 
     <style name="tabLayout" parent="Widget.Design.TabLayout">
-        <item name="tabSelectedTextColor">@color/orange</item>
-        <item name="tabIndicatorColor">@color/orange</item>
+        <item name="tabSelectedTextColor">#2e80a0</item>
+        <item name="tabIndicatorColor">#2e80a0</item>
         <item name="tabTextAppearance">@style/customTabText</item>
     </style>
 
     <style name="ToolbarTabLayout" parent="Widget.Design.TabLayout">
     </style>
 
+    <style name="SelectedTabStyle">
+        <item name="android:color">#2e80a0</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
     <style name="customTabText">
-        <item name="android:textSize">14dp</item>
-        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#a3a3a3</item>
     </style>
 
     <style name="radio_button">
