--- a/trunk/ddscanner/app/src/main/res/layout/item_people.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_people.xml
@@ -4,8 +4,10 @@
     >
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="65dp"
-        android:layout_height="57dp"
+        android:layout_width="wrap_content"
+        android:layout_height="58dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:src="@drawable/avatar_checkin"
         android:scaleType="center"/>
     <LinearLayout
@@ -16,12 +18,14 @@
         android:gravity="center_vertical"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Andrei lashkevich"
             android:textSize="16sp"
             android:textColor="@color/black_text"/>
         <TextView
+            android:id="@+id/count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="159reviews, 31 likes"
