--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -55,7 +55,6 @@
             android:id="@+id/review"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:text="Vwry very good spot in whateewer very good play market bla bla bla bla "
             android:textColor="@color/black_text"
             android:textSize="14sp" />
@@ -63,7 +62,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/review_photos_rc"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
             android:layout_marginBottom="10dp" />
 
         <TextView
