CHange background IW accroding type of dive choosed dive spot

--- a/trunk/ddscanner/app/src/main/res/layout/dive_spot_info_small.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_spot_info_small.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_layout"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="110dp"
     android:background="@drawable/iw_card_wreck"
@@ -30,6 +31,7 @@
         android:src="@drawable/ic_iw_star_full"/>
 
     <TextView
+        android:id="@+id/divespot_type"
         android:layout_below="@+id/rating"
         android:layout_marginTop="3dp"
         android:layout_marginLeft="22dp"
