--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -171,6 +171,15 @@
         <item name="android:src">@drawable/divider</item>
     </style>
 
+    <style name="EmptyButtons">
+        <item name="android:layout_height">42dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:background">@drawable/border_with_empty_fill</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
