Checkins count and list in fragment profile

--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:transitionName="image"
                 android:fitsSystemWindows="true"
                 android:id="@+id/main_photo"
                 android:layout_width="match_parent"
