--- a/trunk/ddscanner/app/src/main/res/layout/product_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/product_item.xml
@@ -12,6 +12,7 @@
         android:background="?attr/selectableItemBackground">
 
         <ImageView
+            android:transitionName="image"
             android:id="@+id/product_logo"
             android:layout_width="55dp"
             android:layout_height="55dp"
