Complete user profile

--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -165,6 +165,7 @@
         <ImageView
             style="@style/DividerStyle"/>
         <LinearLayout
+            android:id="@+id/created_activity"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="45dp"
@@ -196,6 +197,7 @@
         <ImageView
             style="@style/DividerStyle"/>
         <LinearLayout
+            android:id="@+id/edited_activity"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="45dp"
