--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -485,7 +485,7 @@
                     android:background="@color/white">
 
                     <android.support.v7.widget.RecyclerView
-                        android:id="@id/sealife_rc"
+                        android:id="@+id/sealife_rc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
