--- a/trunk/ddscanner/app/src/main/res/layout/dive_sites_map_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_sites_map_fragment.xml
@@ -1,116 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <com.google.android.gms.maps.MapView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp">
-            <ImageView
-                android:id="@+id/zoom_plus"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:padding="10dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/background_map_tools"
-                android:src="@drawable/ic_zoom_plus"/>
-            <ImageView
-                android:id="@+id/zoom_minus"
-                android:layout_below="@+id/zoom_plus"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:padding="10dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/background_map_tools"
-                android:src="@drawable/ic_zoom_minus"/>
-            <ImageView
-                android:id="@+id/go_to_my_location"
-                android:layout_below="@+id/zoom_minus"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:padding="10dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="23dp"
-                android:background="@drawable/background_map_tools"
-                android:src="@drawable/ic_my_location"/>
-        </RelativeLayout>
+
     <RelativeLayout
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:id="@+id/map_control_layout"
+        android:layout_gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="15dp">
+
+        <ImageView
+            android:id="@+id/zoom_plus"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/background_map_tools"
+            android:padding="10dp"
+            android:src="@drawable/ic_zoom_plus" />
+
+        <ImageView
+            android:id="@+id/zoom_minus"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/zoom_plus"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/background_map_tools"
+            android:padding="10dp"
+            android:src="@drawable/ic_zoom_minus" />
+
+        <ImageView
+            android:id="@+id/go_to_my_location"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/zoom_minus"
+            android:layout_marginTop="23dp"
+            android:background="@drawable/background_map_tools"
+            android:padding="10dp"
+            android:src="@drawable/ic_my_location" />
+    </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/map_list_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_gravity="bottom|left"
+        android:layout_margin="14dp"
         android:src="@drawable/ic_acb_list"
-        app:backgroundTint="@color/white"
-        android:layout_margin="14dp"/>
-        <android.support.design.widget.FloatingActionButton
+        app:backgroundTint="@color/white" />
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_ds_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="14dp"
         android:src="@drawable/ic_acb_plus"
-        app:backgroundTint="@color/orange"
-        android:layout_margin="14dp"/>
-        <RelativeLayout
-            android:id="@+id/dive_spot_info_layout"
-            android:layout_below="@+id/map_list_fab"
-            android:visibility="gone"
-            android:orientation="vertical" android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:background="@drawable/iw_card_wreck">
+        app:backgroundTint="@color/orange" />
 
-            <TextView
-                android:id="@+id/dive_spot_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:lines="1"
-                android:ellipsize="end"
-                android:text="Racha yai wrecks fds fds fds fsdf sdf sd ds"
-                android:layout_marginRight="30dp"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="20dp"/>
+    <RelativeLayout
+        android:layout_gravity="bottom"
+        android:id="@+id/dive_spot_info_layout"
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:background="@drawable/iw_card_wreck"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-            <LinearLayout
-                android:id="@+id/rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_below="@+id/dive_spot_title"
-                android:gravity="center_vertical|center_horizontal"
-                android:layout_marginTop="3dp"
-                android:orientation="horizontal"/>
+        <TextView
+            android:id="@+id/dive_spot_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:ellipsize="end"
+            android:lines="1"
+            android:text="Racha yai wrecks fds fds fds fsdf sdf sd ds"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
 
-            <TextView
-                android:layout_below="@+id/rating"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="22dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Wreck"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_iw_arrow"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="16dp"/>
+        <LinearLayout
+            android:id="@+id/rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dive_spot_title"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="3dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="horizontal" />
 
-        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rating"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="3dp"
+            android:text="Wreck"
+            android:textColor="@color/white" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/ic_iw_arrow" />
+
     </RelativeLayout>
-</RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
