--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,7 @@
 <ScrollView
     android:layout_width="match_parent"
     android:id="@+id/about"
-    android:visibility="visible"
+    android:visibility="gone"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
